# Nmap Changelog ($Id$); -*-text-*-

o [GH#279][Zenmap] Added a legend for the Topography window. [Suraj Hande]

o [NSE] Added clamav-exec to detect ClamAV servers vulnerable to unauthorized
  clamav command execution. [Paulino Calderon]

o [NSE] Added http-aspnet-debug to detect ASP.NET applications with
  debugging enabled. Script submitted by Josh Amishav-Zlatin. [Paulino Calderon]

o Nmap can now make full use of Npcap, the Nmap Project's packet sniffing
  library for Windows. Most notably, this enables SYN scan and OS detection
  against localhost. [Yang Luo]

o [NSE] Fix a crash that happened when trying to print the percent done of 0
  NSE script threads:
    timing.cc:710 bool ScanProgressMeter::printStats(double, const timeval*): Assertion 'ltime' failed.
  This would happen if no scripts were scheduled in a scan phase and the user
  pressed a key or specified a short --stats-every interval. Reported by
  Richard Petrie. [Daniel Miller]

o [NSE] ssl-enum-ciphers will give a failing score to any server with an RSA
  certificate whose public key uses an exponent of 1. [Daniel Miller]

o Update oldest supported Windows version to Vista (Windows 6.0). This enables
  the use of the poll Nsock engine. [Daniel Miller]

o [GH#345][Zenmap] On Windows, save Zenmap's stderr output to a writeable
  location (%LOCALAPPDATA%\zenmap.exe.log or %TEMP%\zenmap.exe.log) instead of
  next to the zenmap.exe executable. This avoids a warning message when closing
  Zenmap if it produced any stderr output. [Daniel Miller]

o [GH#379][NSE] Fix http-iis-short-name-brute to report non vulnerable hosts.
  Reported by alias1. [Paulino Calderon]

o [GH#283][Nsock] Avoid "unknown protocol:0" debug messages and an "Unknown
  address family 0" crash on Windows and other platforms that do not set the
  src_addr argument to recvfrom for TCP sockets. [Daniel Miller]

o [NSE][GH#371] Fix mysql-audit by adding needed library requires to the